fix line spacing below headers and paragraphs

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+* {
+    margin:0;
+    padding:0;
+}
+
+h3, h4, h5 {
+    margin-bottom: 5px;
+}
 .container {
     background-color: #CCCCFF;
     height: 100vh;
